src/test/valid/custom/impParamArrayElemInAssign.wacc
# a simple function definition and call

# Output:
# 0

# Program:

begin
  int f(x, a) is
    x = a[1];
    return 0 
  end
  println 0
end
