src/test/invalid/semanticErr/extensionTests/classes/classMethodIncorrectReturnType.wacc
# Types of attributes are preserved inside of methods

begin
  int f() is
    return 1
  end

  class Car() is
    int speed;
    string colour;

    Car(int s, string c) is
      speed = s
    end
    
    Car(string c, int s) is
      speed = s
    end

    int getSpeed() is
      return speed + colour
    end
  end

  int x = call f();
  println x
end
